--- a/css/creative.css
+++ b/css/creative.css
@@ -31,27 +31,6 @@
 }
 
 
-/* Color Theme Swatches in Hex */
-.Portabilis-Diário-1-hex { color: #3B1980; }
-.Portabilis-Diário-2-hex { color: #5324B3; }
-.Portabilis-Diário-3-hex { color: #6B2EE6; }
-.Portabilis-Diário-4-hex { color: #2EE6A8; }
-.Portabilis-Diário-5-hex { color: #33FFBB; }
-
-/* Color Theme Swatches in RGBA */
-.Portabilis-Diário-1-rgba { color: rgba(59, 25, 127, 1); }
-.Portabilis-Diário-2-rgba { color: rgba(83, 35, 178, 1); }
-.Portabilis-Diário-3-rgba { color: rgba(107, 45, 229, 1); }
-.Portabilis-Diário-4-rgba { color: rgba(45, 229, 168, 1); }
-.Portabilis-Diário-5-rgba { color: rgba(50, 255, 186, 1); }
-
-/* Color Theme Swatches in HSLA */
-.Portabilis-Diário-1-hsla { color: hsla(260, 66, 30, 1); }
-.Portabilis-Diário-2-hsla { color: hsla(260, 66, 41, 1); }
-.Portabilis-Diário-3-hsla { color: hsla(260, 78, 54, 1); }
-.Portabilis-Diário-4-hsla { color: hsla(160, 78, 54, 1); }
-.Portabilis-Diário-5-hsla { color: hsla(160, 100, 60, 1); }
-
 *,
 *::before,
 *::after {
@@ -281,7 +260,7 @@ button {
 
 .type-plan .icon i {
   margin-top: 20px;
-  color: #bdc3c7;
+  color: rgba(11, 7, 159, 1);
 }
 
 .type-plan:hover {
@@ -304,7 +283,7 @@ button {
   font-size: 1.5rem;
   margin: 10px 0 40px 0;
   font-weight: 700;
-  color: #5324B3;
+  color: rgba(11, 7, 159, 1);
 }
 
 .type-plan h4 {
@@ -313,7 +292,7 @@ button {
 }
 
 .main {
-  background: #3B1980;
+  background: rgba(11, 7, 159, 1);
   color: #f2f2ff;
 }
 
@@ -345,7 +324,7 @@ button {
 /* ================ count number ========== */
 
 .number {
-  background: #33FFBB;
+  background: #0df0c3;
 }
 .count-number span{
   font-size: 5rem;
@@ -372,7 +351,7 @@ button {
   text-decoration: none;
 }
 .social-links a i{
-  color: #3B1980;
+  color: rgba(11, 7, 159, 1);
   transition: transform .8s;
   display: block;
 }
@@ -401,7 +380,7 @@ button {
 
 .photo h3 {
   font-size: 4rem;
-  background: linear-gradient(to left, rgba(59, 25, 127, 1), rgba(107, 45, 229, 1));
+  background: linear-gradient(to left, rgba(11, 7, 159, 1), rgba(0, 82, 255, 1));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   display: inline;
@@ -6398,7 +6377,7 @@ a.close.disabled {
 
 .about h2 {
   font-size: 5rem;
-  background: linear-gradient(to left, rgba(59, 25, 127, 1), rgba(107, 45, 229, 1));
+  background: linear-gradient(to left, rgba(11, 7, 159, 1), rgba(0, 82, 255, 1));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   display: inline;
@@ -6418,7 +6397,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #33FFBB !important;
+  background-color: #0df0c3 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -9875,7 +9854,7 @@ hr.light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 72px);
-  background: linear-gradient(to bottom, rgba(107, 45, 229, 0.8) 0%, rgba(59, 25, 127, 0.8) 100%), url("../img/bg-1.jpg");
+  background: linear-gradient(to bottom, rgba(12, 8, 160, 0.8) 0%, rgba(19, 8, 225, 0.8) 100%), url("../img/bg-1.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
