logo adicionado e ajustes no css

--- a/css/creative.css
+++ b/css/creative.css
@@ -400,6 +400,12 @@ button {
   
 /* ============= End photography css ================= */
 
+
+
+.logo img {
+  width: 70%;
+}
+
 button:focus {
   outline: 1px dotted;
   outline: 5px auto -webkit-focus-ring-color;
